fix: text overflow

--- a/src/app/suggestion/suggestion.component.scss
+++ b/src/app/suggestion/suggestion.component.scss
@@ -8,6 +8,7 @@
 
   @include mobile {
     padding: 24px;
+    width: 100%; // Prevent horizontal text overflow
   }
 }
 
